# alicedbv2

./: .gitignore  .gitmodules  CMakeLists.txt  Graph_Test.cpp  LICENSE  README.md  TODO.md
Source/: CMakeLists.txt  DiskManager.cpp  Graph.h  Node.h  Producer.h  Storage.h  TablePage.h  WorkerPool.h  factorial.cpp  main.cpp
Source/Include/: AliceDB.h  BufferPool.h  Common.h  DiskManager.h  EdgeCache.h  Graph.h  Node.h  NodeWrappers.h  Producer.h  Queue.h  Storage.h  TablePage.h  Tuple.h  WorkerPool.h
Source/Include/Storage/: DiskManager.h
Source/Storage/: BufferPool.cpp  DiskManager.cpp
Tests/: BinaryFileTests.cpp  CMakeLists.txt  ComplexTests.cpp  ContinousDataArrivalTest.cpp  MultiNodeTest.cpp  PresentationTest.cpp  SimpleNodesTest.cpp  SimpleStateNodesTest.cpp  StatefullNodesTest.cpp  StatelessNodesTest.cpp  Storage_Test.cpp  TCPDataProducerTest.cpp  WorkerPoolTest.cpp
Tests/old/: MultiNodeTest.cpp  SimpleStateNodesTest.cpp  StatelessNodesTest.cpp
scripts/: run-clang-format.py  run-clang-tidy.py
